--- a/Chart.yaml
+++ b/Chart.yaml
@@ -40,8 +40,8 @@ dependencies:
     repository: "@helx-charts"
   - name: gitea
     condition: gitea.enabled
-    version: "^0.0.0"
-    repository: "@https://dl.gitea.io/charts/"
+    version: "^10.1.2"
+    repository: "@gitea-charts"
   - name: gitea-assist
     condition: gitea-assist.enabled
     version: "^1.0.0"
