--- a/templates/grader-api-postgresql-secret.yaml
+++ b/templates/grader-api-postgresql-secret.yaml
@@ -1,8 +1,8 @@
-{{- if and (.Release.IsInstall) (.Values.gitea.enabled) }}
+{{- if and (.Release.IsInstall) (index .Values "grader-api" "enabled") }}
 apiVersion: v1
 kind: Secret
 metadata:
-  name: gitea-postgresql
+  name: grader-api-postgresql
 data:
   password: {{ randAlphaNum 24 | b64enc }}
   postgres-password: {{ randAlphaNum 24 | b64enc }}
