--- a/templates/student-appstore-postgresql-secret.yaml
+++ b/templates/student-appstore-postgresql-secret.yaml
@@ -1,12 +1,9 @@
+{{- if and (.Release.IsInstall) (index .Values "student-helx" "enabled") }}
 apiVersion: v1
 kind: Secret
 metadata:
   name: student-appstore-postgresql
 data:
-  {{- if .Release.IsInstall }}
-  password: {{ randAlphaNum 50 | b64enc }}
-  postgres_password: {{ randAlphaNum 50 | b64enc }}
-  {{ else }}
-  password: {{ index (lookup "v1" "Secret" .Release.Namespace ( include "student-helx.appstore.postgresql.auth.existingSecret" . )).data "password" }}
-  postgres_password: {{ index (lookup "v1" "Secret" .Release.Namespace ( include "student-helx.appstore.postgresql.auth.existingSecret" . )).data "postgres_password" }}
-  {{ end }}
+  password: {{ randAlphaNum 24 | b64enc }}
+  postgres-password: {{ randAlphaNum 24 | b64enc }}
+{{- end }}
