--- a/templates/gitea-configmap.yaml
+++ b/templates/gitea-configmap.yaml
@@ -1,7 +1,9 @@
+{{- if .Values.gitea.enabled }}
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  labels:
   name: gitea-env
 data:
-  GITEA__DATABASE__HOST: gitea-postgresql.default.svc.cluster.local:5432
+  database: |
+    HOST=eduhelx-gitea-postgresql:5432
+{{- end }}
