--- a/values-min-change.yaml
+++ b/values-min-change.yaml
@@ -2,6 +2,7 @@
 # values file for the deployment to reasonably work.
 
 student-helx:
+  enabled: true
   ambassador:
     securityContext:
       # -- Set these options when deploying to openshift. Defaults seen here.
@@ -39,10 +40,25 @@ professor-helx:
       APPSTORE_DJANGO_PASSWORD: "8dm19g0q4cmx"
       EMAIL_HOST_PASSWORD: ""
     saml:
-      ASSERTION_URL: https://helx-test.apps.renci.org
-      ENTITY_ID: "https://helx-test.apps.renci.org/saml2_auth/acs/"
+      ASSERTION_URL: https://tcheek.apps.renci.org
+      ENTITY_ID: "https://tcheek.apps.renci.org/saml2_auth/acs/"
     gitea:
       host: helx-test-gitea.apps.renci.org
+  resty:
+    enabled: true
+    service:
+      serverName: tcheek.apps.renci.org
+    SSL:
+      nginxTLSSecret: tcheek-apps-renci-org-tls
+  ui:
+    config:
+      brand_name: eduhelx-dev
+      search:
+        enabled: "false"
+        url: https:\/\/tcheek.apps.renci.org\/search-api
+
+grader-api:
+  enabled: false
 
 gitea:
   gitea:
@@ -54,10 +70,6 @@ gitea:
         DOMAIN: helx-test-gitea.apps.renci.org
         ROOT_URL: https://helx-test-gitea.apps.renci.org
   ingress:
-    annotations:
-      cert-manager.io/cluster-issuer: letsencrypt
-    className: null
-    enabled: true
     hosts:
     - host: helx-test-gitea.apps.renci.org
       paths:
